--- a/themes/genesis-base-child-theme/assets/css/main.css
+++ b/themes/genesis-base-child-theme/assets/css/main.css
@@ -948,13 +948,23 @@ ol.flickity-page-dots {
 .site-inner {
   width: 100%;
   overflow: hidden;
-  padding: 30px; }
+  padding: 30px;
+  padding-top: 0;
+  padding-bottom: 0; }
   @media (max-width: 768px) {
     .site-inner {
       padding: 30px; } }
   @media (max-width: 600px) {
     .site-inner {
       padding: 20px; } }
+  @media (max-width: 768px) {
+    .site-inner {
+      padding-top: 0;
+      padding-bottom: 0; } }
+  @media (max-width: 600px) {
+    .site-inner {
+      padding-top: 0;
+      padding-bottom: 0; } }
   .site-inner .content {
     display: flex;
     flex-wrap: wrap;
@@ -3072,13 +3082,23 @@ select {
   margin-bottom: 0; }
 
 .wp-block-group.alignfull, .wp-block[data-align="full"] .wp-block-group {
-  padding: 30px; }
+  padding: 30px;
+  padding-top: 0;
+  padding-bottom: 0; }
   @media (max-width: 768px) {
     .wp-block-group.alignfull, .wp-block[data-align="full"] .wp-block-group {
       padding: 30px; } }
   @media (max-width: 600px) {
     .wp-block-group.alignfull, .wp-block[data-align="full"] .wp-block-group {
       padding: 20px; } }
+  @media (max-width: 768px) {
+    .wp-block-group.alignfull, .wp-block[data-align="full"] .wp-block-group {
+      padding-top: 0;
+      padding-bottom: 0; } }
+  @media (max-width: 600px) {
+    .wp-block-group.alignfull, .wp-block[data-align="full"] .wp-block-group {
+      padding-top: 0;
+      padding-bottom: 0; } }
   .wp-block-group.alignfull .wp-block-group__inner-container, .wp-block[data-align="full"] .wp-block-group .wp-block-group__inner-container {
     max-width: 1168px;
     margin: 0 auto; }
